--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,22 +1,22 @@
 /* label color */
 .input-field label {
-  color: #40c4ff;
+  color: #000000 !important;
 }
 /* label focus color */
 .input-field input[type='text']:focus + label {
-  color: #40c4ff;
+  color: #40c4ff !important;
 }
 /* label underline focus color */
 .input-field input[type='text']:focus {
-  border-bottom: 1px solid #40c4ff;
-  box-shadow: 0 1px 0 0 #000000;
+  border-bottom: 1px solid #40c4ff !important;
+  box-shadow: 0 1px 0 0 #40c4ff !important;
 }
 /* valid color */
 .input-field input[type='text'].valid {
-  border-bottom: 1px solid #40c4ff;
-  box-shadow: 0 1px 0 0 #40c4ff;
+  border-bottom: 1px solid #40c4ff !important;
+  box-shadow: 0 1px 0 0 #40c4ff !important;
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #40c4ff;
+  color: #40c4ff !important;
 }
