working on singup logic

--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -3,16 +3,16 @@
   color: #000000 !important;
 }
 /* label focus color */
-.input-field input[type='text']:focus + label {
+.input-field input:focus + label {
   color: #40c4ff !important;
 }
 /* label underline focus color */
-.input-field input[type='text']:focus {
+.input-field input:focus {
   border-bottom: 1px solid #40c4ff !important;
   box-shadow: 0 1px 0 0 #40c4ff !important;
 }
 /* valid color */
-.input-field input[type='text'].valid {
+.input-field input.valid {
   border-bottom: 1px solid #40c4ff !important;
   box-shadow: 0 1px 0 0 #40c4ff !important;
 }
