--- a/client/src/components/beerItem/beerItem.css
+++ b/client/src/components/beerItem/beerItem.css
@@ -1,15 +1,23 @@
 .card-image {
-  height: 200px;
-  width: 200px;
+  height: 400px;
+  width: 125px;
+  padding: 15px;
 }
 
 .card-stacked {
   width: 300px;
   height: 500px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .beerImg img {
-  height: 250px;
+  height: 100%;
   width: 100px;
+}
+
+.col {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
