--- a/client/src/components/beerItem/beerItem.css
+++ b/client/src/components/beerItem/beerItem.css
@@ -1,23 +1,15 @@
 .card-image {
-  height: 400px;
-  width: 125px;
-  padding: 15px;
+  height: 200px;
+  width: 200px;
 }
 
 .card-stacked {
   width: 300px;
   height: 500px;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .beerImg img {
-  height: 100%;
+  height: 250%;
   width: 100px;
-}
-
-.col {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  margin-left: 20px;
 }
