--- a/client/src/components/beerItem/beerItem.css
+++ b/client/src/components/beerItem/beerItem.css
@@ -4,12 +4,28 @@
 }
 
 .card-stacked {
-  width: 300px;
+  width: 33.333%;
   height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .beerImg img {
   height: 250%;
   width: 100px;
+}
+.flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.flex-child {
+  -webkit-box-flex: 1 1 auto;
+  -moz-box-flex: 1 1 auto;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin-left: 2%;
 }
