--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,10 @@
 body {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: #fff;
+}
+
+main {
+  flex: 1 0 auto;
 }
