--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,4 @@
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  background-color: #fff;
-}
-
-main {
-  flex: 1 0 auto;
+  margin: 0;
+  padding: 0;
 }
